# CSV-macroeconomic-data-analyzer

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
reports/: average_gdp_report.py  base_report.py  report_factory.py
test_data/: economic1.csv
tests/: test_average_gdp_report.py  test_base_report.py  test_file_reader.py  test_main.py  test_report_factory.py
utils/: file_reader.py
